@@ -8,9 +8,7 @@
 # =========Common Command Line Option Defaults=========
 
 # Run 'make oldconfig' before compiling this kernel?
-# If set to "yes", also suppresses the fetch of the kernel .config file from
-# /etc/kernels, thus preserving the .config file in /usr/src/linux.
-# OLDCONFIG="no"
+OLDCONFIG="yes"
 
 # Run 'make menuconfig' before compiling this kernel?
 MENUCONFIG="no"
